--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,5 +26,8 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run crawler
+        env:
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
         run: |
           python crawler.py
